# vajra

./: CMakeLists.txt  base_scheduler_pybinds.cpp  global_scheduler.patch  pyproject.toml  requirements.txt  setup.py
cmake/: utils.cmake
csrc/commons/: Logging.h  StdCommon.h
csrc/kernels/: activation_kernels.cu  dispatch_utils.h  layernorm_kernels.cu  ops.h  pos_encoding_kernels.cu  pybind.cpp
csrc/model_executor/: pybind.cpp
csrc/model_executor/layers/: FlashinferAttentionWrapper.cpp  FlashinferAttentionWrapper.h  LinearLayers.cpp  LinearLayers.h  NormLayers.cpp  NormLayers.h  RotaryEmbedding.cpp  RotaryEmbedding.h
csrc/model_executor/models/: Llama.cpp  Llama.h
csrc/model_executor/parallel_utils/: ParallelOps.cpp  ParallelOps.h  ProcessGroupWrapper.cpp  ProcessGroupWrapper.h
examples/: holmes.txt  offline_inference.py
offline_inference_output/2024-12-01_17-01-11/replica_0/: sequence_metrics.csv
offline_inference_output/2024-12-01_17-01-11/replica_0/plots/: batch_execution_time.csv  batch_num_decode_tokens.csv  batch_num_prefill_tokens.csv  batch_num_tokens.csv  batch_size.csv  decode_time_execution_plus_preemption_normalized.csv  inter_batch_delay.csv  prefill_e2e_time.csv  prefill_e2e_time_normalized.csv  prefill_e2e_time_piecewise_normalized.csv  prefill_time_execution_plus_preemption.csv  prefill_time_execution_plus_preemption_normalized.csv  request_e2e_time.csv  request_e2e_time_normalized.csv  request_e2e_time_piecewise_normalized.csv  request_execution_plus_preemption_time.csv  request_execution_plus_preemption_time_normalized.csv  request_execution_time.csv  request_execution_time_normalized.csv  request_preemption_time.csv  request_scheduling_delay.csv
pybinds_temp/: base_scheduler.cpp  base_scheduler.h  base_scheduler_pybinds.cpp  sarathi_scheduler.cpp  sarathi_scheduler.h  sarathi_scheduler.h.gch  scheduler_outputs.cpp  scheduler_outputs.h  scheduler_outputs_pybinds.cpp  sequence_status.cpp  sequence_status.h  sequence_status_pybinds.cpp  sequence_with_priority.cpp  sequence_with_priority.h  test.py
sarathi/: __init__.py  types.py
sarathi.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
sarathi/benchmark/: README.md  benchmark_runner.py  config.py  main.py
sarathi/benchmark/capacity_search/config/: config.py
sarathi/benchmark/request_generator/: trace_request_generator.py
sarathi/config/: config.py  flat_dataclass.py
sarathi/core/block_space_manager/: base_block_space_manager.py  block_space_manager_registry.py  mnemosyne_block_space_manager.py
sarathi/core/datatypes/: block.py  comm_info.py  request_output.py  scheduler_output.py  sequence.py  sequence_state.py  zmq_protocol.py
sarathi/core/scheduler/: base_scheduler.py  faster_transformer_scheduler.py  global_scheduler.py  mnemosyne_scheduler.py  orca_scheduler.py  sarathi_scheduler.py  scheduler_registry.py  simple_chunking_scheduler.py  vllm_scheduler.py
sarathi/core/sequence_manager/: base_sequence_manager.py  engine_sequence_manager.py  mnemosyne_engine_sequence_manager.py  mnemosyne_worker_sequence_manager.py  worker_sequence_manager.py
sarathi/engine/: base_llm_engine.py  llm_engine.py  mnemosyne_base_llm_engine.py  mnemosyne_pipeline_parallel_llm_engine.py  multi_replica_llm_engine.py  pipeline_parallel_llm_engine.py  ray_utils.py
sarathi/metrics/: constants.py  cuda_timer.py  data_series.py  metrics_store.py
sarathi/model_executor/: model_loader.py  model_runner.py
sarathi/model_executor/attention/: __init__.py  base_attention_wrapper.py  flashinfer_attention_wrapper.py  flashinfer_attention_wrapper_old.py  no_op_attention_wrapper.py
sarathi/model_executor/layers/: activation.py  layernorm.py  rotary_embedding.py  sampler.py
sarathi/model_executor/layers/fused_moe/: fused_moe.py  layer.py
sarathi/model_executor/models/: __init__.py  falcon.py  llama.py  mixtral.py  qwen.py
sarathi/model_executor/parallel_utils/: __init__.py  layers.py  mappings.py  parallel_state.py
sarathi/transformers_utils/: tokenizer.py
sarathi/utils/: __init__.py  hf_utils.py
sarathi/worker/: base_worker.py  mnemosyne_base_worker.py  mnemosyne_pipeline_parallel_worker.py  pipeline_parallel_worker.py
