[build-system]
requires = [
    "cmake>=3.26",
    "ninja",
    "packaging",
    "setuptools>=61",
    "torch == 2.4.0",
    "wheel",
    "flashinfer>=0.0.5",
    "numpy"
]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
known_first_party = "sarathi"
known_third_party = "wandb"
